--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,17 @@
   --color-gray-200: #E1E1E1;
   --color-gray-300: #DFDFDF;
   --color-gray-400: #D5D5D5;
+  --color-gray-420: #D7DCDF;
   --color-gray-450: #DBDBDB;
+  --color-gray-470: #C1C1C1;
+  --color-gray-490: #CFCFCF;
   --color-gray-500: #A6A6A6;
+  --color-gray-520: #ABABAB;
   --color-gray-550: #666666;
   --color-gray-600: #4D4D4D;
   --color-gray-700: #444444;
   --color-gray-800: #283136;
+  --color-gray-900: #231F20;
 }
 
 /* Global */
@@ -74,6 +79,10 @@ img {
   height: auto;
 }
 
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
 .page {
   height: 100%;
 }
@@ -81,6 +90,8 @@ img {
 .container {
   width: 1200px;
   margin: 0 auto;
+  padding: 0 20px;
+  outline: 2px solid violet;
 }
 
 /* Utils */
@@ -104,16 +115,13 @@ img {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  padding-top: 49px;
   width: 1200px;
   font-size: 16px;
   line-height: 30px;
   font-weight: 500;
   color: var(--color-black);
-}
-
-.main-header {
-  padding-top: 49px;
-  background-color: var(--color-gray-100);
+  outline: 2px solid springgreen;
 }
 
 .nav-item {
@@ -121,20 +129,20 @@ img {
   font-size: 16px;
   line-height: 30px;
   text-transform: uppercase;
+  padding: 0px 22px 0px 23px;
 }
-
-/*Lists */
 
 .site-nav {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
+  margin-right: 44px;
   list-style: none;
-  padding: 26px 0 14px 0;
+  padding: 26px 15px 13px 15px;
 }
 
-.nav-item {
-  margin: 0 22px 0 23px;
+.main-header-logo {
+  width: 160px;
 }
 
 .site-nav a, .cart-link {
@@ -150,14 +158,11 @@ img {
   opacity: 0.3;
 }
 
-.main-header-logo {
-  width: 160px;
-}
-
 .cart-link {
   text-transform: uppercase;
   text-align: right;
-  margin-top: 26px;
+  margin-top: 16px;
+  padding: 10px 0 10px 45px;
   position: relative;
 }
 
@@ -167,7 +172,7 @@ img {
   width: 15px;
   height: 15px;
   right: 100px;
-  top: 7px;
+  top: 17px;
   background-image: url("../img/cart-icon.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -203,7 +208,7 @@ img {
   background-color: var(--color-pink-100);
   font-weight: 500;
   text-transform: uppercase;
-  padding: 17px 40px 15px 40px;
+  padding: 16px 40px 13px 40px;
   border-radius: 3px;
   border: none;
   display: inline-block;
@@ -220,20 +225,48 @@ img {
 /* Slider */
 
 .slider {
-  padding: 10px;
+  position: relative;
+  padding-top: 10px;
+  outline: 2px solid tomato;
+}
+
+.slider-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  position: absolute;
+  width: 400px;
+  margin-left: -200px;
+  justify-content: center;
+  left: 50%;
+  bottom: 96px;
+  z-index: 2;
 }
 
 .slide-title {
   font-weight: 500;
   font-size: 55px;
   line-height: 55px;
+  margin-top: 58px;
+  margin-bottom: 25px;
   color: var(--color-black);
+}
+
+.slide-text {
+  margin: 0;
+}
+
+.slide img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .slide {
   display: none;
-  width: 1200px;
-  margin: 0 auto;
+  position: relative;
+  z-index: 0;
 }
 
 .slide-active {
@@ -241,18 +274,45 @@ img {
 }
 
 .slide .button {
-  padding: 17px 54px 15px 54px;
+  padding: 16px 54px 13px 54px;
   margin-top: 38px;
+  margin-bottom: 80px;
+  border: 0;
 }
 
-.slider-list {
-  list-style: none;
+.slide-item {
+  margin-right: 17px;
 }
+
+.slide-item button {
+  padding: 0;
+  width: 18px;
+  height: 18px;
+  background-color: var(--color-white);
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+}
+
+/*
+.slide-item-active button::before {
+  content: "";
+  position: absolute;
+  padding: 0;
+  width: 8px;
+  height: 8px;
+  top: 5px;
+  background-color: var(--color-white);
+  border: 2px solid var(--color-gray-470);
+  border-radius: 50%;
+}
+*/
 
 /* Products */
 
 .products {
-  padding: 80px 0;
+  padding-top: 80px
 }
 
 .products-list {
@@ -261,7 +321,8 @@ img {
   margin: 0;
   padding: 0;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 100px;
+  column-gap: 40px;
+  /* Почему 40, а не 100? */
 }
 
 .products-list h3 {
@@ -273,7 +334,7 @@ img {
 }
 
 .product-item {
-  background-position: top center;
+  background-position: top start;
   background-repeat: no-repeat;
   padding-top: 146px;
 }
@@ -297,6 +358,10 @@ img {
 
 .product-item p {
   margin-bottom: 32px;
+}
+
+.product-item .button {
+  margin-bottom: 80px;
 }
 
 .product-item-apps .button {
@@ -323,6 +388,16 @@ img {
   background-color: var(--color-yellow-300);
 }
 
+/* Decoration */
+
+.section-bottom-border {
+  border-bottom: 2px solid var(--color-gray-100);
+}
+
+.filled-section {
+  background-color: var(--color-gray-100);
+}
+
 /* Features */
 
 .features {
@@ -331,16 +406,12 @@ img {
   column-gap: 40px;
 }
 
-.features-list {
-  list-style: none;
-  margin-bottom: 73px;
-}
-
 .features-title {
   font-weight: 500;
   font-size: 45px;
   line-height: 45px;
   margin-top: 64px;
+  margin-left: -17px;
   margin-bottom: 41px;
   color: var(--color-black);
 }
@@ -352,40 +423,115 @@ img {
   margin-bottom: 23px;
 }
 
+.features-list {
+  list-style: none;
+  margin-bottom: 80px;
+  margin-left: -3px;
+}
+
+.feature-item {
+  margin: 24px 0;
+  position: relative;
+}
+
+.feature-item::before {
+  content: "";
+  width: 25px;
+  height: 2px;
+  background-color: var(--color-pink-100);
+  display: block;
+  position: absolute;
+  left: -35px;
+  top: 11px;
+}
+
+.stat-wrapper {
+  margin-top: 39px;
+  padding-top: 245px;
+  min-width: 360px;
+  background: url(../img/illustration/nerds-illustration.png) no-repeat;
+  outline: 2px solid pink;
+}
+
 .statistics {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin: 0;
+  margin-top: 30px;
   padding: 0;
   list-style: none;
+  outline: 2px solid blue;
 }
 
 .stat-title {
   font-weight: 700;
   color: var(--color-black);
   text-transform: uppercase;
+  margin-top: -1px;
+  text-align: center;
 }
 
 .stat-subtitle {
   font-weight: 700;
   color: var(--color-black);
-}
-
-.stat-subtitle span {
+  margin: 0;
+  padding: 0;
   font-size: 45px;
   line-height: 64px;
 }
 
-.partners-list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 40px;
-  list-style: none;
-  margin: 0;
+.percent {
+  margin-top: 1px;
+  font-size: 26px;
+  line-height: 40px;
+}
+
+.stat-text {
+  margin-top: 11px;
+  font-size: 16px;
+  line-height: 18px;
+}
+
+/* Partners */
+
+.partners {
   padding: 0;
 }
 
+.partners-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+.partner-item {
+  display: flex;
+  width: 25%;
+  height: 110px;
+  margin: 30px auto 30px;
+  line-height: 0;
+}
+
+.partner-item+.partner-item::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 2px;
+  height: 52px;
+  top: 55px;
+}
+
+/* что-то не учла. псевдоэлемент не работает */
+
 .partner-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   opacity: 0.2;
 }
 
@@ -399,20 +545,6 @@ img {
 
 /* Catalog */
 
-.main-catalog-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  column-gap: 140px;
-}
-
-.main-filter {
-  grid-row: span 2;
-}
-
-.filled-section {
-  background-color: var(--color-gray-100);
-}
-
 .page-main h1 {
   color: var(--color-black);
   font-weight: 500;
@@ -423,7 +555,94 @@ img {
   text-align: center;
 }
 
-.page-main legend, .sorting-title {
+.main-catalog-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 140px;
+}
+
+.main-filter {
+  grid-row: span 2;
+}
+
+.filter-items {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.range-filter {
+  width: 260px;
+  margin-top: 48px;
+}
+
+.range-controls {
+  position: relative;
+  height: 41px;
+  margin-bottom: 14px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+  background-color: var(--color-gray-100);
+  border-radius: 3px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: var(--color-gray-420);
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background-color: var(--color-green-100);
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+  border: 8px solid var(--color-white);
+  background-color: var(--color-gray-520);
+  border-radius: 50%;
+  box-shadow: 0px 2px 1px var(--color-gray-490);
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 18px;
+}
+
+.range-controls .toggle-max {
+  left: 160px;
+}
+
+.price-controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+.price-controls label {
+  text-transform: uppercase;
+}
+
+.price-controls input {
+  width: 64px;
+  padding: 8px;
+  margin-left: 11px;
+  text-align: center;
+  color: inherit;
+  border: none;
+  border-radius: 3px;
+  background-color: var(--color-gray-100);
+  font-family: inherit;
+  font-size: inherit;
+}
+
+.filter-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
@@ -433,11 +652,87 @@ img {
 
 .main-filter ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .filter-item {
   font-size: 16px;
   line-height: 20px;
+  padding-left: 36px;
+  margin-bottom: 20px;
+}
+
+.filter-item label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-input:hover+label {
+  opacity: 1;
+}
+
+/* Заблокирован
+opacity: 0.3
+*/
+
+.filter-input-checkbox label {
+  padding-top: 3px;
+}
+
+..filter-input-radio label {
+  padding-top: 5px;
+}
+
+.filter-input-checkbox:not(:checked)+label::before {
+  content: "";
+  position: absolute;
+  left: -36px;
+  top: 0;
+  width: 19px;
+  height: 19px;
+  opacity: 0.4;
+  border: 2px solid var(--color-gray-600);
+  border-radius: 2px;
+}
+
+.filter-input-checkbox:checked+label::after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: -36px;
+  width: 25px;
+  height: 23px;
+  opacity: 0.4;
+  background-image: url("../img/elements/checkbox-on.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-input-radio+label::before {
+  content: "";
+  position: absolute;
+  left: -36px;
+  top: 0;
+  width: 17px;
+  height: 17px;
+  opacity: 0.4;
+  border: 4px solid var(--color-gray-600);
+  border-radius: 50%;
+}
+
+.filter-input-radio:checked+label::after {
+  content: "";
+  position: absolute;
+  left: -28px;
+  top: 8px;
+  width: 9px;
+  height: 9px;
+  opacity: 0.4;
+  background-color: var(--color-gray-600);
+  border-radius: 50%;
 }
 
 .filter-button {
@@ -482,6 +777,26 @@ img {
   color: var(--color-black);
 }
 
+.sorting-decrease {
+  display: block;
+  width: 0;
+  border: 11px solid transparent;
+  border-left-width: 5px;
+  border-right-width: 5px;
+  border-bottom-width: 0px;
+  border-top-color: var(--color-gray-900);
+}
+
+.sorting-increase {
+  display: block;
+  width: 0;
+  border: 11px solid transparent;
+  border-left-width: 5px;
+  border-right-width: 5px;
+  border-top-width: 0px;
+  border-bottom-color: var(--color-gray-900);
+}
+
 .sorting-item-active {
   opacity: 1;
 }
@@ -515,6 +830,22 @@ img {
   position: relative;
 }
 
+/*
+.template-item img {
+  width: 359px;
+  min-height: 578px;
+  margin: 0;
+  object-fit: contain;
+
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+
+
+}
+
+*/
+
 .template-description {
   position: absolute;
   left: 0;
@@ -526,6 +857,8 @@ img {
 /* Pagination */
 
 .pagination-list {
+  display: flex;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -535,6 +868,10 @@ img {
 
 .pagination-item {
   margin-right: 11px;
+}
+
+.pagination-item:last-child {
+  margin-right: 0;
 }
 
 .pagination-link {
@@ -577,14 +914,17 @@ img {
   overflow: hidden;
 }
 
-.contact {
-  width: 320px;
-  padding: ;
-  margin: 114px auto 122px 0;
+.contacts {
+  width: 319px;
+  text-align: left;
+  padding: 47px 50px;
+  margin: 54px 0 54px 0;
+  background-color: var(--color-white);
 }
 
 .contact-title {
   color: var(--color-black);
+  margin: 0px 0p 22px 0;
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
@@ -594,6 +934,11 @@ img {
   font-size: 16px;
   line-height: 18px;
   color: var(--color-gray-550);
+  margin-bottom: 37px;
+}
+
+.contacts .button {
+  padding: 17px 44px 15px 44px;
 }
 
 /* Socials */
@@ -633,6 +978,26 @@ img {
   background-color: var(--color-pink-300);
 }
 
+.social-item::before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.vk::before {
+  background-image: url(../img/icon/vk-icon.svg);
+}
+
+.fb::before {
+  background-image: url(../img/icon/fb-icon.svg);
+}
+
+.insta::before {
+  background-image: url(../img/icon/insta-icon.svg);
+}
+
 .social-title {
   font-size: 36px;
   line-height: 36px;
@@ -652,4 +1017,57 @@ img {
   font-weight: 700;
   font-size: 45px;
   line-height: 53px;
+  margin: 0;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: auto;
+  right: auto;
+  bottom: 180px;
+  left: 50%;
+  margin: auto;
+  margin-left: -480px;
+  width: 960px;
+  padding: 63px 99px 84px 100px;
+  font-size: 16px;
+  line-height: 18px;
+  color: var(--color-black);
+  background-color: var(--color-white);
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
+}
+
+.modal label {
+  font-weight: 700;
+}
+
+.modal-close {
+  position: absolute;
+  top: 78px;
+  right: 111px;
+  width: 21px;
+  height: 21px;
+  border: 0;
+  opacity: 0.3;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.modal-close::before, .modal-close::after {
+  content: "";
+  position: absolute;
+  top: 9px;
+  left: 0px;
+  width: 21px;
+  height: 4px;
+  background-color: var(--color-pink-100);
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
 }
